# gabbarito

./: .gitignore  app.py  config.ini  dados_fake.py  pyproject.toml
gabbarito/: load_config.py  main.py
gabbarito/domain/entitie/: repair.py
gabbarito/domain/use_case/: driver.py  farol.py
gabbarito/infra/: driver.py  farol.py
gabbarito/presenter/: init.py
gabbarito/presenter/templates/: index.html
gabbarito/presenter/templates/components/: table.html
