[tool.poetry]
name = "gabbarito"
version = "0.1.0"
description = ""
authors = ["GabbaMendonca <gabba.kumbuca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.31.0"
flask = "^3.1.0"
rich = "^14.0.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
